Removed a lot of but not all compiler and Eclipse warnings