@@ -30,8 +30,8 @@ public class NumberFormatTest extends TestCase {
 		assertEquals("20,00", NumberFormat.format(new BigDecimal("20"), locDe, "##.00"));
 		assertEquals("20.00", NumberFormat.format(Integer.valueOf(20), locEn, "##.00"));
 		assertEquals("20,00", NumberFormat.format(Integer.valueOf(20), locDe, "##.00"));
-		assertEquals("20.00", NumberFormat.format(new Long(20), locEn, "##.00"));
-		assertEquals("20,00", NumberFormat.format(new Long(20), locDe, "##.00"));
+		assertEquals("20.00", NumberFormat.format(Long.valueOf(20), locEn, "##.00"));
+		assertEquals("20,00", NumberFormat.format(Long.valueOf(20), locDe, "##.00"));
 	}
 
 	public void testFormatUpperBoundaries() {
@@ -40,9 +40,9 @@ public class NumberFormatTest extends TestCase {
 		assertEquals("2111222333.00", NumberFormat.format(Integer.valueOf(2111222333), locEn, "##########.00"));
 		assertEquals("2111222333,00", NumberFormat.format(Integer.valueOf(2111222333), locDe, "##########.00"));
 		assertEquals("9111222333444555666.00",
-				NumberFormat.format(new Long(9111222333444555666L), locEn, "###################.00"));
+				NumberFormat.format(Long.valueOf(9111222333444555666L), locEn, "###################.00"));
 		assertEquals("9111222333444555666,00",
-				NumberFormat.format(new Long(9111222333444555666L), locDe, "###################.00"));
+				NumberFormat.format(Long.valueOf(9111222333444555666L), locDe, "###################.00"));
 	}
 
 	public void testFormatBDAfterDecimalDigitsAndRounding() {
